// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-infrastructure-sync - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Compare and synchronize infrastructure artifacts — Draw.io diagrams, Bicep templates, and live Azure resources — to detect drift and divergence. Supports diagram-to-Azure sync (quick and deep modes), Bicep-to-diagram comparison, and Bicep-to-Azure what-if analysis. WHEN: check drift, compare diagram to azure, sync bicep and diagram, bicep what-if, preview bicep changes, detect infrastructure drift, diagram drift, compare bicep deployment, does my diagram match azure, compare bicep to diagram, infrastructure drift detection. DO NOT USE FOR: generating diagrams (use azure-resource-visualizer), generating Bicep (use azure-iac-generator), pre-deployment policy checks (use azure-validate).",
  "extractedKeywords": [
    "analysis",
    "artifacts",
    "authentication",
    "azure",
    "azure-iac-generator",
    "azure-resource-visualizer",
    "azure-validate",
    "bicep",
    "bicep-to-azure",
    "bicep-to-diagram",
    "changes",
    "check",
    "checks",
    "cli",
    "compare",
    "comparison",
    "deep",
    "deploy",
    "deployment",
    "detect",
    "detection",
    "diagram",
    "diagram-to-azure",
    "diagrams",
    "divergence",
    "does",
    "draw",
    "drift",
    "generating",
    "infrastructure",
    "live",
    "match",
    "mcp",
    "modes",
    "policy",
    "pre-deployment",
    "preview",
    "quick",
    "redis",
    "resources",
    "supports",
    "sync",
    "synchronize",
    "templates",
    "what-if",
    "when",
  ],
  "name": "azure-infrastructure-sync",
}
`;

exports[`azure-infrastructure-sync - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "artifacts",
  "authentication",
  "azure",
  "azure-iac-generator",
  "azure-resource-visualizer",
  "azure-validate",
  "bicep",
  "bicep-to-azure",
  "bicep-to-diagram",
  "changes",
  "check",
  "checks",
  "cli",
  "compare",
  "comparison",
  "deep",
  "deploy",
  "deployment",
  "detect",
  "detection",
  "diagram",
  "diagram-to-azure",
  "diagrams",
  "divergence",
  "does",
  "draw",
  "drift",
  "generating",
  "infrastructure",
  "live",
  "match",
  "mcp",
  "modes",
  "policy",
  "pre-deployment",
  "preview",
  "quick",
  "redis",
  "resources",
  "supports",
  "sync",
  "synchronize",
  "templates",
  "what-if",
  "when",
]
`;
